--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/firstnamelastname.ico">
+  <meta name="description" content="Mama Coco is Love,Mama Coco is Life">
+  <meta name="author" content="862270122">
 
-  <title>John Doe - Business Administration</title>
+  <title>Juan Sainz - Business Administration</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Juan Sainz</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/firstnamelastname.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,30 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Juan Sainz
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">Approximately 9 years ago, I immigrated to the United state from Mexico. During my first year, was 1st grade, I struggled in classes because I couldn't speak the language nor understand what anyone was saying. It was difficult for me to write in English because my home language was Spanish but I managed to pass the subjects with at least a C or higher, the only class I had strength in was math because it only dealt with numbers. But, I never gave up and got better each year academically up to the point where I almost had straight A's, the only exception was English, this subject was really difficult for me.
+At the beginning of middle school, I was fortunate enough to have a great English teacher who helped me to become a better writer and speaker. That was the first time I received an A in English which was very significant for me because it helped me realize that all the work I had put in class was worth it. That year I earned straight A's for the first time ever. In the next few years, I had my promotion from middle school and I had already accumulated straight A's all three years of middle school. I received the principal's list award, Avid- Certificate of Achievement, President's Education Award Program and Double-A Award. I felt achieved so did my parents, my main motivators. This was a very significant event in my life that made me realize that no matter what cultural barrier I was going to face I will never feel discouraged or believe that I am not good enough.
+<br><br>
 
-        Enter bio here<br><br>
+      
+Each year the classes got harder and moving to high school was a bit of a challenge. But that did not stop me from getting good grades, I worked extra hard in my classes, did my work and even got involved in the school in general, which has helped me gain the knowledge that I have today from those classes. As a senior, I have strategies for learning and understanding the material, to become equipped for college.   
+I would like to attend college with the hopes of getting a good job that I could be passionate about. The career I have chosen is business administration and marketing. This career has gained my interest because, in the future, I hope to be able to create a business of my own. But for me to accomplish this goal, I need to be well educated and prepared. My personal goal that has been over the past school year is to get good grades and get involved in school extracurricular activities. Also, my school experience has influenced me to attend college. My AVID class specifically had impacted me to take a look at the variety of colleges and careers offered. This class and many other classes have helped me prepare to attend college by being more organized, being able to take better notes, and how to apply for any Financial aid and college applications. My school counselors have also prepared me for school by continually helping me out for my classes I have taken to meet my A-G requirements. Also, my family has motivated me to attend college because they are the reason why I am fortunate to be in this country and have a better future.
+<br><br>
 
-        Enter bio here
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://linkedin.com/jpssb4">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/jpssb4">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/jpssb4">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:jsain012@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -88,56 +92,51 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
+        <h2 class="mb-5">Have worked 3 jobs</h2></h2>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Detailer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">OWN Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Detail Cars<br> 
+              • Owns Detail Van<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2022 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Auction Worker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">The Auction Company</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Collected Bidders money<br>
+              • Drove Auction truck<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2020 - March 2021</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Mama Coco Lover</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Disney Pixar</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Watched movie "Coco" 299 times for Mama Coco<br>
+          
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2018 - January 2022</span>
           </div>
         </div>
-
-
 
       </div>
 
@@ -152,37 +151,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Business Administration</div>
+        <div>Marketing</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2021 - Present</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
-      </div>
     </section>
 
     <hr class="m-0">
@@ -191,7 +166,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/coco 1.jpg" width="500px">
+    <img src="img/coco2.jpg" width="500px"><br>
+    <img src="img/coco3.jpg" width="500px">
+    <img src="img/coco 4.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +177,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Juan Sainz</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
